<resources>
    <string name="app_name">Password Manager</string>
    <string name="signup">Create Account</string>
    <string name="signin">Login</string>
    <string name="email">Email Address</string>
    <string name="masterPassword">Master Password</string>
    <string name="retype">Re-type Master Password</string>
    <string name="hint">Master Password Hint (Optional)</string>
    <string name="createAccount">Create Account</string>
    <string name="mainPagewriting">Login or Create a new account to access your secure vault.</string>
    <string name="todo">Globe Image</string>
    <string name="iteminfo">Item Information</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email1">Email</string>
    <string name="password">Password</string>
    <string name="url">URL</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="addinfo">Add Information</string>
    <string name="add">Add</string>
</resources>